--- a/includes/email_template_parts/header.html
+++ b/includes/email_template_parts/header.html
@@ -162,7 +162,7 @@
                                 1 East Cary ST
                                 Richmond, VA 23219
                                 </pre>
-                                Submit all entries mounted on black board with no less than a 1’ boarder. Pieces larger than 18” x 24” may be submitted unmounted. Campaigns (at least 3 ads) may be mounted on one board or taped together accordion style. Attach a printout of the entry information to the back of each board. </td>
+                                Submit all entries mounted on black board with no less than a 1" border. Pieces larger than 18” x 24” may be submitted unmounted. Campaigns (at least 3 ads) may be mounted on one board or taped together accordion style. Attach a printout of the entry information to the back of each board. </td>
                             </tr>
                         </table>
                     </td>
